<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="action_settings">Settings</string>
    <string name="action_balance">Adjust Balance</string>
    <string name="fab_add_expense">Add\nSingle Expense</string>
    <string name="fab_add_monthly_expense">Add\nRecurring Expenses</string>
    <string name="title_activity_add_expense">Add expense</string>
    <string name="title_activity_add_budget">Add Budget</string>
    <string name="title_activity_add_income">Add income</string>
    <string name="title_activity_edit_expense">Edit expense</string>
    <string name="title_activity_edit_income">Edit income</string>
    <string name="title_activity_recurring_expense_add">Add recurring expense</string>
    <string name="title_activity_recurring_income_add">Add recurring income</string>
    <string name="title_activity_recurring_expense_edit">Edit recurring expense</string>
    <string name="title_activity_recurring_income_edit">Edit recurring income</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">SimpleBudget</string>
    <string name="title_activity_premium">Premium</string>
    <string name="title_activity_more_apps">More Apps</string>
    <string name="title_budget_report">Budget report</string>
    <string name="search_expenses">Search expenses</string>
    <string name="title_search_expenses">Search by title, category, amount</string>
    <string name="title_upcoming">Upcoming expenses</string>
    <string name="title_expenses_breakdown">Linear Breakdown</string>
    <string name="title_expenses_pi_chart_breakdown">Pie Chart Breakdown</string>
    <string name="cancel">Cancel</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="amount">Amount ( %s )</string>
    <string name="budget_amount_hint">Budget Amount ( %s )</string>
    <string name="description">Description</string>
    <string name="budget_description">Budget Title</string>
    <string name="type">Type</string>
    <string name="payment">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="setting_category_app_title">App</string>
    <string name="setting_category_app_support_and_help">Feedback, Help and Support</string>
    <string name="setting_category_rate_button_title">Rate the app?</string>
    <string name="setting_title_category_contact_us">Contact Us</string>
    <string name="setting_category_faq_title">FAQ</string>
    <string name="setting_category_rate_button_message">Let me know what you think?</string>
    <string name="setting_category_faq_message">Frequently asked questioned</string>
    <string name="setting_category_currency_change_button_message">Select the currency you want to use</string>
    <string name="setting_category_limit_set_button_title">Low balance threshold (%s)</string>
    <string name="setting_category_limit_set_button_message">Change the threshold at which you want to be warned about a low balance</string>
    <string name="setting_category_start_day_of_week_title">Change start day of weeks</string>
    <string name="setting_category_start_day_of_week_summary">Start day of week is (%s)</string>
    <string name="setting_category_share_app_title">Share with friends</string>
    <string name="setting_category_rate_app_title">Feedback / Contact Us</string>
    <string name="setting_category_share_app_message">SimpleBudget is free, so why not share it with your friends!</string>
    <string name="setting_category_feedback_app_message">Share your feedback to improve SimpleBudget!</string>
    <string name="setting_category_premium_title">Premium</string>
    <string name="setting_category_data_backup_title">Manage Backup</string>
    <string name="setting_category_premium_redeem_title">Promo code</string>
    <string name="setting_category_premium_redeem_message">Redeem a promo code</string>
    <string name="text_redeem_a_promo_code"><u>Redeem a promo code?</u></string>
    <string name="setting_category_not_premium_status_title">Remove Ads</string>
    <string name="setting_category_not_premium_status_message">Lifetime access of all premium features without Ads.</string>
    <string name="setting_app_version">App releases</string>
    <string name="become_premium_user">Become Premium User</string>
    <string name="action_search">Search expenses</string>
    <string name="monthly_report_button_title">Monthly report</string>
    <string name="backup_settings_activity_title">Data Backup</string>
    <string name="setting_category_limit_set_button_key" translatable="false">limit_set</string>
    <string name="setting_category_currency_change_button_key" translatable="false">change_currency</string>
    <string name="setting_category_rate_button_key" translatable="false">rate</string>
    <string name="setting_category_contact_us" translatable="false">contact_us</string>
    <string name="setting_category_faq_key" translatable="false">faq</string>
    <string name="setting_category_share_app_key" translatable="false">share_app</string>
    <string name="setting_category_feedback_app_key" translatable="false">feedback_app</string>
    <string name="setting_category_premium_key" translatable="false">category_premium</string>
    <string name="setting_category_premium_redeem_key" translatable="false">redeem</string>
    <string name="setting_category_start_day_of_week_key" translatable="false">start_day_of_week</string>
    <string name="setting_enable_app_protection_key" translatable="false">enable_app_protection</string>
    <string name="setting_enable_app_notifications_key" translatable="false">enable_app_notification</string>
    <string name="setting_category_reports_title">Reports</string>
    <string name="setting_monthly_reports_key" translatable="false">monthly_reports</string>
    <string name="setting_monthly_reports_title" translatable="false">Monthly Reports</string>
    <string name="setting_monthly_reports_summary" translatable="false">View and download Weekly, Monthly expenses report.</string>
    <string name="setting_monthly_breakdown_key" translatable="false">monthly_breakdown</string>
    <string name="setting_monthly_breakdown_title" translatable="false">Expenses Breakdown</string>
    <string name="setting_monthly_breakdown_summary" translatable="false">View monthly breakdown of each category.</string>
    <string name="setting_app_version_key" translatable="false">app_version</string>
    <string name="setting_enable_app_protection_general">App password protection</string>
    <string name="setting_enable_app_notification_general">Notifications permission</string>
    <string name="setting_category_backup" translatable="false">backup</string>
    <string name="share_app">Share App</string>
    <string name="setting_privacy_policy_key" translatable="false">privacy_policy</string>
    <string name="setting_privacy_policy_title" translatable="false">Privacy Policy</string>
    <string name="setting_privacy_policy_summary" translatable="false">SimpleBudget takes your privacy seriously, Click here for more details.</string>
    <string name="setting_more_apps_key" translatable="false">more_apps</string>
    <string name="setting_more_apps_title" translatable="false">More Apps</string>
    <string name="setting_more_apps_summary" translatable="false">For more simple apps, Click here.</string>
    <string name="setting_telegram_channel_key" translatable="false">telegram_channel</string>
    <string name="setting_telegram_channel_title" translatable="false">Telegram</string>
    <string name="setting_telegram_channel_summary" translatable="false">Quick support of \'Simple Budget\'</string>
    <string name="setting_whatsapp_channel_key" translatable="false">whatsapp_channel</string>
    <string name="setting_whatsapp_channel_title" translatable="false">Whatsapp</string>
    <string name="setting_whatsapp_channel_summary" translatable="false">Latest news about \'Simple Budget\'</string>
    <string name="setting_youtube_channel_key" translatable="false">youtube_channel</string>
    <string name="setting_youtube_channel_title" translatable="false">Youtube</string>
    <string name="setting_youtube_channel_summary" translatable="false">Watch helpful videos about \'Simple Budget\'</string>
    <string name="setting_how_to_key" translatable="false">how_to</string>
    <string name="setting_how_to_title" translatable="false">How to?</string>
    <string name="setting_how_to_summary" translatable="false">How to use common feature in \'Simple Budget\'</string>
    <string name="setting_app_open_source_key" translatable="false">app_open_source</string>
    <string name="setting_app_open_source_title" translatable="false">Open source (Apache License, Version 2.0)</string>
    <string name="text_open_source" translatable="false">Open source</string>
    <string name="setting_app_open_source_summary" translatable="false">Sources are available under the Apache 2.0 licence, Click here for more details.</string>
    <string name="setting_app_open_source_details" translatable="false">This app is open source and based on <b>EasyBudget app</b> originally developed by\n<b>Benoit LETONDOR</b>\neasybudget@benoitletondor.com</string>
    <string name="text_download_easy_budget_on_play_store" translatable="false">You can download <b>EasyBudget app</b> on the PlayStore</string>
    <string name="text_easy_budget_link" translatable="false">https://play.google.com/store/apps/details?id=com.benoitletondor.easybudgetapp</string>
    <string name="text_easy_budget_source" translatable="false"><b>EasyBudget app</b> source can be found here.</string>
    <string name="text_easy_budget_source_link" translatable="false">https://github.com/benoitletondor/EasyBudget</string>
    <string name="text_simple_budget_source" translatable="false"><b>Simple Budget app</b> source can be found here.</string>
    <string name="text_simple_budget_source_link" translatable="false">https://github.com/WaheedNazir/EasyBudget</string>
    <string name="breakdown">Breakdown</string>
    <string name="change_language">Change Language</string>
    <string name="text_general">General</string>
    <string name="setting_reset_app_data_key">reset_app_data_key</string>
    <string name="reset_app_data">Reset App Data</string>
    <string name="simple_budget_delete_all_app_data">SimpleBudget Reset App Data</string>
    <string name="delete_app_data_description_one">If you really want to clear/reset all of your data and wants to have a fresh start you can proceed with reset. <b>Note: It can\'t be undone</b> and by resetting app data will clear all of your expenses, income and balance.</string>
    <string name="delete_app_data_description_two"><b>Note:</b> By resetting SimpleBudget data <u>your purchases won\'t be deleted.</u></string>
    <string name="delete_app_data_description_three"><u>Cloud data won\'t be deleted</u> by deleting with this option. If you want to delete cloud data you can delete it from app settings. If you have enabled data backup <u>you can restore it from app settings.</u></string>
    <string name="proceed_with_deleting_your_data">Proceed with resetting local data?</string>
    <string name="proceed_deleting">Proceed With Reset</string>
    <string name="premium_caption_one">1. Ad-Free Experience</string>
    <string name="premium_caption_two">2. Multiple Accounts</string>
    <string name="premium_caption_three">3. Set Multiple Budgets</string>
    <string name="premium_caption_four">4. Premium Features</string>
    <string name="try_free_and_subscribe">Try free and subscribe</string>
    <string name="setting_about_us_key">about_us</string>
    <string name="title_about_us">About us</string>
    <string name="title_about_us_description">Privacy policy, about app, release notes, more apps</string>
    <string name="what_people_say">What people say?</string>
</resources>