<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    tools:context=".view.premium.PremiumActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/go_premium_now"
        app:lottie_speed="500" />

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animationView"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_24sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescriptionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenTitle"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/premium_caption_one"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/tvDescriptionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescriptionOne"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/premium_caption_two"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/tvDescriptionThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescriptionTwo"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/premium_caption_three"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/tvDescriptionFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescriptionThree"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/premium_caption_four"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInAppProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/whatPeopleSay"
        android:layout_below="@+id/tvDescriptionFour"
        android:layout_marginVertical="@dimen/_10sdp" />

    <TextView
        android:id="@+id/whatPeopleSay"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_above="@+id/buttonBuy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_12sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:maxLines="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/what_people_say"
        android:textColor="@color/titleYellow"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/promoCode"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/ic_large_button_green"
        android:gravity="center"
        android:text="@string/try_free_and_subscribe"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/promoCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/_4sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:maxLines="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/text_redeem_a_promo_code"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>
