<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/backup_settings_cloud_storage_not_activated_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/ad_view_container"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/_16ssp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_budget_delete_all_app_data"
            android:textColor="@color/caldroid_black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/delete_app_data_description_one"
            android:textColor="@color/recurring_icon_color" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/delete_app_data_description_two"
            android:textColor="@color/recurring_icon_color"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/backup_settings_cloud_storage_delete_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/proceed_with_deleting_your_data"
            android:textColor="@color/caldroid_black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backup_settings_cloud_restore_cta" />

        <TextView
            android:id="@+id/backup_settings_cloud_storage_delete_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/delete_app_data_description_three"
            android:textColor="@color/recurring_icon_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnProceedWithReset"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/budget_red"
            android:text="@string/proceed_deleting" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@+id/backup_settings_cloud_storage_not_activated_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:indeterminate="true"
        android:visibility="gone" />


    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>